--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
   "dependencies": {
+    "aws-amplify": "^6.15.0",
     "bootstrap": "^5.3.6"
+  },
+  "devDependencies": {
+    "@aws-amplify/backend": "^1.16.1",
+    "@aws-amplify/backend-cli": "^1.7.2",
+    "aws-cdk-lib": "^2.189.1",
+    "constructs": "^10.4.2",
+    "esbuild": "^0.25.5",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   }
 }
